// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ResultsContainer should accept a resultTemplate 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  background-color: #FFFFFF;
}

.c1:hover {
  background-color: #FAFAFA;
}

.c1.active {
  background-color: #F1F1F1;
}

.c1 p {
  margin-bottom: 0;
}

.c0 {
  background-color: white;
  position: absolute;
  width: inherit;
  z-index: 3;
  box-sizing: border-box;
  box-shadow: 0 0.5rem 0.75rem -0.375rem rgba(0,0,0,0.2);
  border-radius: 0 0 4px 4px;
  padding: 1rem;
  top: 3.25rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 1rem;
  text-align: inherit;
  text-transform: none;
  color: #595959;
}

.c2 small {
  font-size: 87.5%;
}

.c3 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 1rem;
  text-align: inherit;
  text-transform: none;
  color: #595959;
}

.c3 small {
  font-size: 87.5%;
}

<div
  className="anchor-auto-complete-results-container c0"
>
  <div
    className="auto-complete-results"
  >
    <a
      className="anchor-list-item c1"
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <p
        className="anchor-typography c2"
        color="charcoal"
      >
        Result Item 1
      </p>
    </a>
    <a
      className="anchor-list-item c1"
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <p
        className="anchor-typography c3"
        color="charcoal"
      >
        Result Item 2
      </p>
    </a>
  </div>
</div>
`;

exports[`Component: ResultsContainer should be defined 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  cursor: pointer;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  background-color: #FFFFFF;
}

.c2:hover {
  background-color: #FAFAFA;
}

.c2.active {
  background-color: #F1F1F1;
}

.c2 p {
  margin-bottom: 0;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  background-color: white;
  position: absolute;
  width: inherit;
  z-index: 3;
  box-sizing: border-box;
  box-shadow: 0 0.5rem 0.75rem -0.375rem rgba(0,0,0,0.2);
  border-radius: 0 0 4px 4px;
  padding: 1rem;
  top: 3.25rem;
}

.c3 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 1rem;
  text-align: inherit;
  text-transform: none;
  color: #595959;
}

.c3 small {
  font-size: 87.5%;
}

.c4 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 1rem;
  text-align: inherit;
  text-transform: none;
  color: #595959;
}

.c4 small {
  font-size: 87.5%;
}

<div
  className="anchor-auto-complete-results-container c0"
>
  <div
    className="anchor-list auto-complete-results c1"
  >
    <a
      className="anchor-list-item c2"
      label="Result Item 1"
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <p
        className="anchor-typography c3"
        color="charcoal"
      >
        Result Item 1
      </p>
    </a>
    <a
      className="anchor-list-item c2"
      label="Result Item 2"
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <p
        className="anchor-typography c4"
        color="charcoal"
      >
        Result Item 2
      </p>
    </a>
  </div>
</div>
`;
